--- a/src/css/components/quote.css
+++ b/src/css/components/quote.css
@@ -1,5 +1,5 @@
 .quote {
-  padding: 40px;
+  padding: 40px 40px 36px 40px;
   background: #f7f7f7;
 }
 
